tests/invalid/scoping/double_define.rs
/*
compilationExitCode: 3
*/

main(): i32 {
    {
        a: i64;
        a: i64;
    }
}